--- a/Front-end/profil.css
+++ b/Front-end/profil.css
@@ -143,3 +143,31 @@ body::before {
     border-radius: 5px;
     border: none;
 }
+/* Style pour les avis */
+.user-reviews-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.user-reviews-section li {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    color: #333; 
+}
+
+.user-reviews-section strong {
+    color: #222; 
+}
+
+.user-reviews-section small {
+    color: #555; 
+}
+
+.user-reviews-section h2 {
+    color: #111; 
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+}
